--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     branches: [master]
 
+defaults:
+  run:
+    working-directory: ./src
+
 jobs:
   build:
     runs-on: ubuntu-latest
