--- a/src/BasisTheory.net/BasisTheory.net.csproj
+++ b/src/BasisTheory.net/BasisTheory.net.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
+        <AssemblyName>BasisTheory.net</AssemblyName>
+        <RootNamespace>BasisTheory.net</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
