chore: Change output directory

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -40,6 +40,6 @@ jobs:
         run: dotnet pack -o output --no-build --no-restore -c Release -p:PackageVersion=${{ steps.bump_version.outputs.new_tag }}
 
       - name: Push
-        run: dotnet nuget push ./src/output/*.nupkg --skip-duplicate -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/Basis-Theory/index.json
+        run: dotnet nuget push ./output/*.nupkg --skip-duplicate -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/Basis-Theory/index.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
