--- a/src/BasisTheory.net/BasisTheory.net.csproj
+++ b/src/BasisTheory.net/BasisTheory.net.csproj
@@ -4,6 +4,14 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <AssemblyName>BasisTheory.net</AssemblyName>
         <RootNamespace>BasisTheory.net</RootNamespace>
+
+        <IsPackable>true</IsPackable>
+        <Description>Basis Theory .NET SDK</Description>
+        <Copyright>Copyright 2021</Copyright>
+        <PackageProjectUrl>https://github.com/Basis-Theory/basistheory-dotnet</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/Basis-Theory/basistheory-dotnet</RepositoryUrl>
+        <PackageTags>BasisTheory,SDK</PackageTags>
+        <NuspecProperties>version=$(Version)</NuspecProperties>
     </PropertyGroup>
 
     <ItemGroup>
