--- a/src/BasisTheory.net/BasisTheory.net.nuspec
+++ b/src/BasisTheory.net/BasisTheory.net.nuspec
@@ -11,13 +11,13 @@
         <copyright>Copyright 2021</copyright>
         <tags>BasisTheory,SDK</tags>
         <dependencies>
-            <group targetFramework="net5.0">
+            <group targetFramework="netstandard2.1">
                 <dependency id="Microsoft.Extensions.Http.Polly" version="5.0.1" />
                 <dependency id="Newtonsoft.Json" version="13.0.1" />
             </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="bin\Release\net5.0\BasisTheory.net.dll" target="lib\net5.0" />
+        <file src="bin\Release\netstandard2.1\BasisTheory.net.dll" target="lib\netstandard2.1" />
     </files>
 </package>
