--- a/src/BasisTheory.net.Encryption.Azure/BasisTheory.net.Encryption.Azure.csproj
+++ b/src/BasisTheory.net.Encryption.Azure/BasisTheory.net.Encryption.Azure.csproj
@@ -4,18 +4,22 @@
         <TargetFramework>netstandard2.1</TargetFramework>
 
         <IsPackable>true</IsPackable>
-        <Description>Basis Theory .NET SDK</Description>
+        <Description>Basis Theory .NET Azure Encryption Provider</Description>
         <Copyright>Copyright 2021</Copyright>
         <PackageProjectUrl>https://github.com/Basis-Theory/basistheory-dotnet</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Basis-Theory/basistheory-dotnet</RepositoryUrl>
-        <PackageTags>BasisTheory,SDK</PackageTags>
+        <PackageTags>BasisTheory,SDK,Azure</PackageTags>
         <NuspecProperties>version=$(Version)</NuspecProperties>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-      <PackageReference Include="System.Text.Json" Version="5.0.2" />
+      <PackageReference Include="Azure.Security.KeyVault.Keys" Version="4.1.0" />
+      <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.1.0" />
+      <PackageReference Include="LazyCache" Version="2.1.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BasisTheory.net\BasisTheory.net.csproj" />
     </ItemGroup>
 
 </Project>
