--- a/src/BasisTheory.net/BasisTheory.net.csproj
+++ b/src/BasisTheory.net/BasisTheory.net.csproj
@@ -13,6 +13,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
       <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="System.Text.Json" Version="5.0.2" />
