--- a/src/BasisTheory.net.AspNetCore/BasisTheory.net.AspNetCore.csproj
+++ b/src/BasisTheory.net.AspNetCore/BasisTheory.net.AspNetCore.csproj
@@ -4,19 +4,21 @@
         <TargetFramework>netstandard2.1</TargetFramework>
 
         <IsPackable>true</IsPackable>
-        <Description>Basis Theory .NET SDK</Description>
+        <Description>Basis Theory .NET AspNetCore Extensions</Description>
         <Copyright>Copyright 2021</Copyright>
         <PackageProjectUrl>https://github.com/Basis-Theory/basistheory-dotnet</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Basis-Theory/basistheory-dotnet</RepositoryUrl>
-        <PackageTags>BasisTheory,SDK</PackageTags>
+        <PackageTags>BasisTheory,SDK,AspNetCore</PackageTags>
         <NuspecProperties>version=$(Version)</NuspecProperties>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-      <PackageReference Include="System.Text.Json" Version="5.0.2" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BasisTheory.net\BasisTheory.net.csproj" />
     </ItemGroup>
 
 </Project>
