--- a/src/BasisTheory.net/BasisTheory.net.csproj
+++ b/src/BasisTheory.net/BasisTheory.net.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="LazyCache" Version="2.1.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
       <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
       <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
