--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -20,14 +20,15 @@ jobs:
         with:
           dotnet-version: 5.0.x
 
-      - name: Restore
-        run: dotnet restore
+      - name: Docker Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.PRIVATE_PACKAGE_TOKEN }}
 
-      - name: Build
-        run: dotnet build --no-restore -c Release
-
-      - name: Test
-        run: dotnet test --no-build --no-restore -c Release
+      - name: Verify
+        run: make verify
 
       - name: Version and Tag
         id: bump_version
