--- a/src/BasisTheory.net.AcceptanceTests/BasisTheory.net.AcceptanceTests.csproj
+++ b/src/BasisTheory.net.AcceptanceTests/BasisTheory.net.AcceptanceTests.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.8" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -17,6 +18,12 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BasisTheory.net.AspNetCore\BasisTheory.net.AspNetCore.csproj" />
+      <ProjectReference Include="..\BasisTheory.net.Encryption.Azure.AspNetCore\BasisTheory.net.Encryption.Azure.AspNetCore.csproj" />
+      <ProjectReference Include="..\BasisTheory.net\BasisTheory.net.csproj" />
     </ItemGroup>
 
 </Project>
