--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,7 +2,7 @@ name: Pull Request
 
 on:
   pull_request:
-    branches: [master]
+    branches: [master, release]
 
 defaults:
   run:
@@ -29,3 +29,9 @@ jobs:
 
       - name: Verify
         run: make verify
+
+      - name: Release
+        run: make dry-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_PAT }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
