chore: fix makefile indent

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Verify
         run: make verify
 
-      - name: Release
+      - name: Dry Release
         run: make dry-release
         env:
           GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_PAT }}
