--- a/src/package.json
+++ b/src/package.json
@@ -1,22 +1,25 @@
 {
   "name": "basistheory-dotnet",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "Basis Theory .NET SDK",
   "repository": "https://github.com/Basis-Theory/basistheory-dotnet",
   "author": "Basis Theory",
   "license": "MIT",
   "scripts": {
-    "release": "semantic-release",
-    "release-dry": "semantic-release --dry-run"
+    "release": "semantic-release"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.3",
     "semantic-release": "^17.4.4"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "release": {
     "branches": [
@@ -31,11 +34,31 @@
       "@semantic-release/release-notes-generator",
       "@semantic-release/changelog",
       "@semantic-release/npm",
-      "@semantic-release/github",
+      [
+        "@semantic-release/exec",
+        {
+          "prepareCmd": "dotnet pack -o output --no-build --no-restore -c Release -p:PackageVersion=${nextRelease.version}"
+        }
+      ],
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "dotnet nuget push ./output/*.nupkg --skip-duplicate -k ${process.env.GITHUB_TOKEN} -s https://nuget.pkg.github.com/Basis-Theory/index.json"
+        }
+      ],
+      [
+        "@semantic-release/github",
+        {
+          "assets": "output/*.nupkg"
+        }
+      ],
       [
         "@semantic-release/git",
         {
-          "assets": ["package.json", "CHANGELOG.md"],
+          "assets": [
+            "package.json",
+            "CHANGELOG.md"
+          ],
           "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
         }
       ]
