chore: Add explicit step to set the package.json version

--- a/src/package.json
+++ b/src/package.json
@@ -32,6 +32,12 @@
       [
         "@semantic-release/exec",
         {
+          "prepareCmd": "npm version ${nextRelease.version} --no-git-tag-version --allow-same-version"
+        }
+      ],
+      [
+        "@semantic-release/exec",
+        {
           "prepareCmd": "dotnet pack -o output --no-build --no-restore -c Release -p:PackageVersion=${nextRelease.version}"
         }
       ],
