--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,11 +2,7 @@ name: Pull Request
 
 on:
   pull_request:
-    branches: [master]
-
-defaults:
-  run:
-    working-directory: ./src
+    branches: [master, release]
 
 jobs:
   build:
