--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,6 @@
 {
   "branches": [
+    "release",
     {
       "name": "master",
       "prerelease": "beta"
@@ -30,7 +31,7 @@
     [
       "@semantic-release/github",
       {
-        "assets": "output/*.nupkg"
+        "assets": ["output/*.nupkg"]
       }
     ],
     [
