chore: convert to use beta branch to track beta releases

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,8 +1,8 @@
 {
   "branches": [
-    "release",
+    "master",
     {
-      "name": "master",
+      "name": "beta",
       "prerelease": "beta"
     }
   ],
