chore: remove prerelease flow for now until we sort out gitflow

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,10 +1,6 @@
 {
   "branches": [
-    "master",
-    {
-      "name": "beta",
-      "prerelease": "beta"
-    }
+    "master"
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
