docs: update to package readme with Nuget package

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,7 +3,14 @@
     "master"
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    ["@semantic-release/commit-analyzer", {
+      "preset": "angular",
+      "releaseRules": [
+        {"type": "docs", "release": "patch"},
+        {"type": "refactor", "release": "patch"},
+        {"scope": "no-release", "release": false}
+      ]
+    }],
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     [
