--- a/src/BasisTheory.net.Encryption.Azure.AspNetCore/BasisTheory.net.Encryption.Azure.AspNetCore.csproj
+++ b/src/BasisTheory.net.Encryption.Azure.AspNetCore/BasisTheory.net.Encryption.Azure.AspNetCore.csproj
@@ -10,12 +10,17 @@
         <RepositoryUrl>https://github.com/Basis-Theory/basistheory-dotnet</RepositoryUrl>
         <PackageTags>BasisTheory,SDK,Azure,AspNetCore</PackageTags>
         <NuspecProperties>version=$(Version)</NuspecProperties>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Azure.Identity" Version="1.4.1" />
       <PackageReference Include="LazyCache.AspNetCore" Version="2.1.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
     <ItemGroup>
