--- a/src/BasisTheory.net.AspNetCore/BasisTheory.net.AspNetCore.csproj
+++ b/src/BasisTheory.net.AspNetCore/BasisTheory.net.AspNetCore.csproj
@@ -14,12 +14,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="LazyCache.AspNetCore" Version="2.1.3" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <None Include="README.md" Pack="true" PackagePath="\"/>
+      <None Include="README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
