--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/release-notes-generator": "^9.0.3",
     "semantic-release": "^17.4.4"
+  },
+  "resolutions": {
+    "semver-regex": "^3.1.3"
   }
 }
