--- a/src/BasisTheory.net.Encryption.Azure/BasisTheory.net.Encryption.Azure.csproj
+++ b/src/BasisTheory.net.Encryption.Azure/BasisTheory.net.Encryption.Azure.csproj
@@ -10,6 +10,7 @@
         <RepositoryUrl>https://github.com/Basis-Theory/basistheory-dotnet</RepositoryUrl>
         <PackageTags>BasisTheory,SDK,Azure</PackageTags>
         <NuspecProperties>version=$(Version)</NuspecProperties>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
