--- a/.releaserc.json
+++ b/.releaserc.json
@@ -22,7 +22,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "dotnet pack src/BasisTheory.net.sln -o output --no-build --no-restore -c Release -p:PackageVersion=${nextRelease.version}"
+        "prepareCmd": "dotnet pack src/BasisTheory.net.sln -o output -c Release -p:PackageVersion=${nextRelease.version} /p:AssemblyVersion=${nextRelease.version}"
       }
     ],
     [
