chore: moves output dir one level up

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           pwd
           ls -la
-          dotnet pack src/BasisTheory.net.sln -p:PackageOutputPath=output -c Release -p:PackageVersion=0.0.0 /p:AssemblyVersion=0.0.0
+          dotnet pack src/BasisTheory.net.sln -p:PackageOutputPath=../output -c Release -p:PackageVersion=0.0.0 /p:AssemblyVersion=0.0.0
           ls -la
 
 #      - name: Verify
