--- a/src/BasisTheory.net.AspNetCore/BasisTheory.net.AspNetCore.csproj
+++ b/src/BasisTheory.net.AspNetCore/BasisTheory.net.AspNetCore.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
 
         <IsPackable>true</IsPackable>
         <Description>Basis Theory .NET AspNetCore Extensions</Description>
@@ -17,7 +17,7 @@
     <ItemGroup>
       <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
