--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.7",
-    "@semantic-release/release-notes-generator": "^11.0.1",
-    "semantic-release": "^21.0.2"
+    "@semantic-release/github": "^8.1.0",
+    "@semantic-release/release-notes-generator": "^11.0.4",
+    "semantic-release": "^21.0.9"
   },
   "resolutions": {
-    "semver-regex": "^3.1.3"
+    "ansi-regex": "^5.0.1",
+    "http-cache-semantics": "^4.1.1",
+    "minimatch": "^3.0.5",
+    "minimist": "^1.2.6",
+    "semver": "^7.5.2",
+    "semver-regex": "^3.1.4"
   }
 }
