--- a/src/BasisTheory.net.Tests/BasisTheory.net.Tests.csproj
+++ b/src/BasisTheory.net.Tests/BasisTheory.net.Tests.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFrameworks>net462;net7.0</TargetFrameworks>
         <IsTestProject>True</IsTestProject>
         <IsPackable>false</IsPackable>
+        <LangVersion>12.0</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
