--- a/src/BasisTheory.net/BasisTheory.net.csproj
+++ b/src/BasisTheory.net/BasisTheory.net.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
 
         <IsPackable>true</IsPackable>
         <Description>Basis Theory .NET SDK</Description>
@@ -13,7 +13,12 @@
         <NuspecProperties>version=$(Version)</NuspecProperties>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <AssemblyVersion>1.0.0</AssemblyVersion>
+        <LangVersion>12.0</LangVersion>
     </PropertyGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <PackageReference Include="IndexRange" Version="1.0.3" />
+    </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="LazyCache" Version="2.4.0" />
