--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-publish:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -25,10 +25,10 @@ jobs:
           cache: 'yarn'
 
       - name: Verify
-        run: make verify
+        run: bash scripts/verify.sh
 
       - name: Release
-        run: make release
+        run: bash scripts/release.sh
         env:
           GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_PAT }}
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
