--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -17,4 +17,4 @@ jobs:
           dotnet-version: 7.0.x
 
       - name: Verify
-        run: make verify
+        run: bash scripts/verify.sh
