--- a/src/BasisTheory.net/BasisTheory.net.csproj
+++ b/src/BasisTheory.net/BasisTheory.net.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
 
         <IsPackable>true</IsPackable>
         <Description>Basis Theory .NET SDK</Description>
@@ -13,15 +13,20 @@
         <NuspecProperties>version=$(Version)</NuspecProperties>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <AssemblyVersion>1.0.0</AssemblyVersion>
+        <LangVersion>11.0</LangVersion>
     </PropertyGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <PackageReference Include="IndexRange" Version="1.0.3" />
+    </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="LazyCache" Version="2.4.0" />
       <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.10" />
+      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
-      <PackageReference Include="System.Text.Json" Version="7.0.3" />
+      <PackageReference Include="System.Text.Json" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
