--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
-name: Verify
+name: Release
 
 on:
+  pull_request:
+    branches: [master]
   push:
     branches: [master]
 
@@ -31,7 +33,7 @@ jobs:
         run: bash scripts/release.sh
         env:
           GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_PAT }}
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+#          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
 
       - name: Slack Release Alert
         uses: 8398a7/action-slack@v3
