--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -21,3 +21,12 @@
 #docs/*.md
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
+
+.github/**/*
+.gitignore
+.travis.yml
+git_push.sh
+README.md
+scripts/**/*
+makefile
+swagger.json
