--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,4 +17,4 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Build
-        run: bash build.sh
+        run: cmd /c "START /b build.bat"
