--- a/src/BasisTheory.net.Test/BasisTheory.net.Test.csproj
+++ b/src/BasisTheory.net.Test/BasisTheory.net.Test.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
         <RootNamespace>BasisTheory.net.Test</RootNamespace>
         <AssemblyName>BasisTheory.net.Test</AssemblyName>
         <IsPackable>false</IsPackable>
@@ -18,10 +18,9 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="JsonSubTypes" Version="2.0.1" />
+        <PackageReference Include="NUnit" Version="3.11.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="JsonSubTypes" Version="1.6.0" />
         <PackageReference Include="RestSharp" Version="105.1.0" />
     </ItemGroup>
 
