--- a/src/BasisTheory.net/BasisTheory.net.csproj
+++ b/src/BasisTheory.net/BasisTheory.net.csproj
@@ -20,5 +20,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="JsonSubTypes" Version="1.6.0" />
     <PackageReference Include="RestSharp" Version="105.1.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="8.0.0" />
   </ItemGroup>
 </Project>
