--- a/src/BasisTheory.net/BasisTheory.net.csproj
+++ b/src/BasisTheory.net/BasisTheory.net.csproj
@@ -13,6 +13,10 @@
     <Copyright>Copyright 2024</Copyright>
     <RootNamespace>BasisTheory.net</RootNamespace>
     <Version>1.0.0</Version>
+    <NuspecProperties>version=$(Version)</NuspecProperties>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <LangVersion>11.0</LangVersion>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\BasisTheory.net.xml</DocumentationFile>
     <RepositoryUrl>https://github.com/Basis-Theory/basistheory-dotnet.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
