--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -25,8 +25,12 @@
 .github/**/*
 .gitignore
 .travis.yml
+appveyor.yml
+build.bat
+build.sh
 BasisTheory.net.sln
 git_push.sh
+mono_nunit_test.sh
 scripts/**/*
 makefile
 swagger.json
