chore: update workflows for new secrets

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,19 @@ on:
 
 jobs:
   build-publish:
+    environment: PROD
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.SEMANTIC_RELEASE_PAT }}
+          token: ${{ secrets.GH_SEMANTIC_RELEASE_PAT }}
+
+      - name: Start Deploy Message
+        uses: Basis-Theory/github-actions/deploy-slack-action@master
+        with:
+          slack-api-token: ${{ secrets.SLACK_DUCKBOT_API_KEY }}
+          channel: ${{ vars.SLACK_DUCKBOT_PRODUCT_DEPLOY_CHANNEL }}
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
@@ -21,21 +28,19 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
-          cache: 'yarn'
+          node-version: "18"
+          cache: "yarn"
 
       - name: Release
         run: make release
         env:
-          GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_PAT }}
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GH_SEMANTIC_RELEASE_PAT }}
+          NUGET_API_KEY: ${{ secrets.NUGET_PUBLISHING_TOKEN }}
 
-      - name: Slack Release Alert
-        uses: 8398a7/action-slack@v3
+      - name: Stop Deploy Message
         if: always()
+        uses: Basis-Theory/github-actions/deploy-slack-action@master
         with:
-          status: ${{ job.status }}
-          channel: ${{ secrets.SLACK_RELEASE_CHANNEL_ID }}
-          fields: 'repo,commit,message,workflow,job'
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          slack-api-token: ${{ secrets.SLACK_DUCKBOT_API_KEY }}
+          channel: ${{ vars.SLACK_DUCKBOT_PRODUCT_DEPLOY_CHANNEL }}
+          status: "done"
